Updated card for better appeal along with background

--- a/index.html
+++ b/index.html
@@ -12,28 +12,23 @@
     <div class="main-container">
         <h1>My Library</h1>
         <form class="add-book-form">
-            <div class="box">
+            <div class="text-box">
                 <input id="title-box" placeholder="Title" type="text">
             </div>
-            <div class="box">
+            <div class="text-box">
                 <input id="author-box" placeholder="Author" type="text">
             </div>
-            <div class="box">
-                <input id="pages-box" placeholder="Pages" type="text">
+            <div class="text-box">
+                <input id="pages-box" placeholder="Pages" type="number">
             </div>
-            <div class="box">
+            <div class="read-box">
                 <p>Read This Book?</p>
                 <input id="checkbox"  type="checkbox">
             </div>
            <input type="submit" id="add-btn" value="Add">
         </form>
         <div class="library-container">
-            <div class="display-books">
-                <h2>Book Name</h2>
-                <h2>Author</h2>
-                <h2>Pages</h2>
-                <h2>Read</h2>
-                <div class="underline"></div>
+            <div class="display-books">  
             </div>
         </div>
     </div>
