Made form pop up along with make grid auto-fit

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
     <div class="main-container">
         <h1>My Library</h1>
+        <button  class="add-btn">+</button>
         <form class="add-book-form">
+            <button onclick="removeForm()" type="button" class="exit-form-btn">×</button>
             <div class="text-box">
                 <input id="title-box" placeholder="Title" type="text">
             </div>
